--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>system</title>
+    <script src="jquery-1.8.2.min.js"></script>
   </head>
   <body>
     hello world!
+    <div class="box"></div>
+  <script>
+  $(function(){
+    $.ajax({
+      method:'GET',
+      url:'demo.js',
+      success: function(){
+        $(this).addClass("done");
+      }
+    });
+    $('.box').html('123')
+  });
+  </script>
   </body>
 </html>
