--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     $.ajax({
       method:'GET',
       url:'demo.js',
-      success: function(){
-        $(this).addClass("done");
+      success: function(data){
+       console.log(data);
       }
     });
     $('.box').html('123')
