--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       url:'demo.js',
       success: function(data){
        console.log(data);
+      },
+      error:function(){
+        console.log('请求失败')
       }
     });
     $('.box').html('123')
