--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   $(function(){
     $.ajax({
       method:'GET',
-      url:'/demo.js',
+      url:'demo.js',
       success: function(data){
        console.log(data);
       },
