--- a/code.html
+++ b/code.html
@@ -92,11 +92,11 @@ $(function(){
             var status=false;
             var sx=0;
             
-            $('.slider_block').on('mousedown',function(e){
+            $('.slider_block').mousedown(function(e){
                 status=true;
                 sx=e.clientX;
                 $('.slider').addClass('drag');
-                $(document).on('mouseup',function(e){
+                $(document).mouseup(function(e){
                     status=false;
                     if(that.curX>=that.x-4&&that.curX<=that.x+4){
                         alert('succ')
@@ -114,7 +114,7 @@ $(function(){
                     }
                 });
             });
-            $(document).on('mousemove',function(e){
+            $(document).mousemove(function(e){
                 if(status){
                     if(e.clientX-sx>=-2&&e.clientX-sx<=262){
                         $('.slider_block').css('transform',`translateX(${e.clientX-sx}px)`);
