--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>用户登录</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/base.css">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
@@ -19,17 +20,21 @@
         </div>
         <div class="col-7 navbar-nav">
             <ul class="d-flex w-100 pl-0 mb-0">
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="/" class="nav-link">首页</a></li>
                 <li class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">home</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">产品分类</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">手机</a>
+                        <a class="dropdown-item" href="#">电脑</a>
+                        <a class="dropdown-item" href="#">平板</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">键盘</a>
+                        <a class="dropdown-item" href="#">鼠标</a>
+                        <a class="dropdown-item" href="#">耳机</a>
                     </div>
                 </li>
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="#" class="nav-link">关于我们</a></li>
+                <li><a href="#" class="nav-link">联系我们</a></li>
             </ul>
         </div>
         <div class="col-4">
