--- a/public/reg.html
+++ b/public/reg.html
@@ -20,17 +20,21 @@
         </div>
         <div class="col-7 navbar-nav">
             <ul class="d-flex w-100 pl-0 mb-0">
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="/" class="nav-link">首页</a></li>
                 <li class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">home</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">产品分类</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">手机</a>
+                        <a class="dropdown-item" href="#">电脑</a>
+                        <a class="dropdown-item" href="#">平板</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">键盘</a>
+                        <a class="dropdown-item" href="#">鼠标</a>
+                        <a class="dropdown-item" href="#">耳机</a>
                     </div>
                 </li>
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="#" class="nav-link">关于我们</a></li>
+                <li><a href="#" class="nav-link">联系我们</a></li>
             </ul>
         </div>
         <div class="col-4">
